Moved Async stuff outside Gsc layer

--- a/CoDPlusPlus/CoDPlusPlus.vcxproj
+++ b/CoDPlusPlus/CoDPlusPlus.vcxproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Engine\Mappings\EntityMapping.cpp" />
-    <ClCompile Include="src\Engine\ScriptLayer\Gsc\Async\HttpResult\HttpResult.cpp" />
+    <ClCompile Include="src\Engine\Async\HttpResult\HttpResult.cpp" />
     <ClCompile Include="src\Hook\Detours\Game\EngineCallbacks.cpp" />
     <ClCompile Include="src\Hook\Detours\Game\GameFixes.cpp" />
     <ClCompile Include="src\Utils\Network\HttpClient.cpp" />
@@ -39,7 +39,7 @@
     <ClCompile Include="src\Utils\OpenGLHelper.cpp" />
     <ClCompile Include="src\Utils\ThreadPool\ThreadPool.cpp" />
     <ClCompile Include="src\Utils\WinApiHelper.cpp" />
-    <ClCompile Include="src\Engine\ScriptLayer\Gsc\Async\Task\Task.cpp" />
+    <ClCompile Include="src\Engine\Async\Task\Task.cpp" />
     <ClCompile Include="vendor\glad\src\glad.c" />
     <ClCompile Include="vendor\ImGui\imgui.cpp" />
     <ClCompile Include="vendor\ImGui\imgui_demo.cpp" />
@@ -51,12 +51,12 @@
     <ClCompile Include="vendor\stb\stb.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Engine\ScriptLayer\Gsc\Async\HttpResult\HttpResult.h" />
+    <ClInclude Include="src\Engine\Async\HttpResult\HttpResult.h" />
     <ClInclude Include="src\Structs\Engine\cmd.h" />
     <ClInclude Include="src\Structs\Engine\input.h" />
     <ClInclude Include="src\Structs\Engine\level_locals.h" />
     <ClInclude Include="src\Utils\Classes\AtomicQueue.h" />
-    <ClInclude Include="src\Engine\ScriptLayer\Gsc\Async\Task\Task.h" />
+    <ClInclude Include="src\Engine\Async\Task\Task.h" />
     <ClInclude Include="src\Structs\Engine\server.h" />
     <ClInclude Include="src\Utils\Network\HttpClient.h" />
     <ClInclude Include="src\Engine\CoDUO.h" />
