--- a/CoDPlusPlus/CoDPlusPlus.vcxproj
+++ b/CoDPlusPlus/CoDPlusPlus.vcxproj
@@ -13,8 +13,10 @@
   <ItemGroup>
     <ClCompile Include="src\Engine\Mappings\EntityMapping.cpp" />
     <ClCompile Include="src\Engine\Async\HttpResult\HttpResult.cpp" />
-    <ClCompile Include="src\Hook\Detours\Game\EngineCallbacks.cpp" />
-    <ClCompile Include="src\Hook\Detours\Game\GameFixes.cpp" />
+    <ClCompile Include="src\Hook\Detours\Game\Core.cpp" />
+    <ClCompile Include="src\Hook\Detours\Game\CodeCallbacks.cpp" />
+    <ClCompile Include="src\Hook\Detours\Game\Fixes.cpp" />
+    <ClCompile Include="src\Hook\Detours\Game\Utility.cpp" />
     <ClCompile Include="src\Utils\Network\HttpClient.cpp" />
     <ClCompile Include="src\Engine\CoDUO.cpp" />
     <ClCompile Include="src\Engine\Mappings\ConsoleMapping.cpp" />
@@ -30,10 +32,9 @@
     <ClCompile Include="src\Render\Materials\Shader.cpp" />
     <ClCompile Include="src\Render\Materials\Texture.cpp" />
     <ClCompile Include="src\Utils\Filesystem\File.cpp" />
-    <ClCompile Include="src\Hook\Detours\Game\BaseGame.cpp" />
+    <ClCompile Include="src\Hook\Detours\Game\Loaders.cpp" />
     <ClCompile Include="src\Hook\Detours\Misc\OpenGL.cpp" />
     <ClCompile Include="src\Hook\Detours\Misc\WinAPI.cpp" />
-    <ClCompile Include="src\Hook\Hook.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Utils\ImGuiManager.cpp" />
     <ClCompile Include="src\Utils\OpenGLHelper.cpp" />
@@ -67,7 +68,6 @@
     <ClInclude Include="src\Render\Materials\Texture.h" />
     <ClInclude Include="src\Utils\Filesystem\File.h" />
     <ClInclude Include="src\Hook\Detours.h" />
-    <ClInclude Include="src\Hook\Detours_defines.h" />
     <ClInclude Include="src\Hook\Hook.h" />
     <ClInclude Include="src\Structs\Engine\gsc.h" />
     <ClInclude Include="src\Structs\Engine\refdef.h" />
