map bindings refactor, string library

--- a/CoDPlusPlus/CoDPlusPlus.vcxproj.filters
+++ b/CoDPlusPlus/CoDPlusPlus.vcxproj.filters
@@ -27,10 +27,6 @@
     <ClCompile Include="vendor\stb\stb.cpp" />
     <ClCompile Include="vendor\glad\src\glad.c" />
     <ClCompile Include="src\Utils\Filesystem\File.cpp" />
-    <ClCompile Include="src\Render\Buffers\VAO.cpp" />
-    <ClCompile Include="src\Render\Buffers\VAO_utils.cpp" />
-    <ClCompile Include="src\Render\Materials\Shader.cpp" />
-    <ClCompile Include="src\Render\Materials\Texture.cpp" />
     <ClCompile Include="src\Utils\Network\HttpClient.cpp" />
     <ClCompile Include="src\Hook\Detours\Game\Fixes.cpp" />
     <ClCompile Include="src\Hook\Detours\Game\CodeCallbacks.cpp" />
@@ -40,6 +36,12 @@
     <ClCompile Include="src\Utils\ThreadPool\ThreadPool.cpp" />
     <ClCompile Include="src\Hook\Detours\Game\Core.cpp" />
     <ClCompile Include="src\Hook\Detours\Game\Utility.cpp" />
+    <ClCompile Include="src\Engine\MapBindings\MapBindings.cpp" />
+    <ClCompile Include="src\Utils\String\String.cpp" />
+    <ClCompile Include="src\Render\Buffers\VAO.cpp" />
+    <ClCompile Include="src\Render\Buffers\VAO_utils.cpp" />
+    <ClCompile Include="src\Render\Materials\Shader.cpp" />
+    <ClCompile Include="src\Render\Materials\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Engine\CoDUO.h" />
@@ -70,10 +72,6 @@
     <ClInclude Include="vendor\glad\include\glad\glad.h" />
     <ClInclude Include="vendor\glad\include\KHR\khrplatform.h" />
     <ClInclude Include="src\Utils\Filesystem\File.h" />
-    <ClInclude Include="src\Render\Materials\Texture.h" />
-    <ClInclude Include="src\Render\Buffers\VAO.h" />
-    <ClInclude Include="src\Render\Buffers\VAO_utils.h" />
-    <ClInclude Include="src\Render\Materials\Shader.h" />
     <ClInclude Include="src\Utils\Network\HttpClient.h" />
     <ClInclude Include="vendor\cpp-httplib\include\httplib.h" />
     <ClInclude Include="src\Structs\Engine\server.h" />
@@ -84,5 +82,11 @@
     <ClInclude Include="src\Engine\Async\HttpResult\HttpResult.h" />
     <ClInclude Include="src\Utils\ThreadPool\ThreadPool.h" />
     <ClInclude Include="src\Engine\Async\Task\Task.h" />
+    <ClInclude Include="src\Engine\MapBindings\MapBindings.h" />
+    <ClInclude Include="src\Utils\String\String.h" />
+    <ClInclude Include="src\Render\Buffers\VAO.h" />
+    <ClInclude Include="src\Render\Buffers\VAO_utils.h" />
+    <ClInclude Include="src\Render\Materials\Shader.h" />
+    <ClInclude Include="src\Render\Materials\Texture.h" />
   </ItemGroup>
 </Project>
