--- a/CoDPlusPlus/CoDPlusPlus.vcxproj
+++ b/CoDPlusPlus/CoDPlusPlus.vcxproj
@@ -11,12 +11,17 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Engine\MapBindings\MapBindings.cpp" />
     <ClCompile Include="src\Engine\Mappings\EntityMapping.cpp" />
     <ClCompile Include="src\Engine\Async\HttpResult\HttpResult.cpp" />
     <ClCompile Include="src\Hook\Detours\Game\Core.cpp" />
     <ClCompile Include="src\Hook\Detours\Game\CodeCallbacks.cpp" />
     <ClCompile Include="src\Hook\Detours\Game\Fixes.cpp" />
     <ClCompile Include="src\Hook\Detours\Game\Utility.cpp" />
+    <ClCompile Include="src\Render\Buffers\VAO.cpp" />
+    <ClCompile Include="src\Render\Buffers\VAO_utils.cpp" />
+    <ClCompile Include="src\Render\Materials\Shader.cpp" />
+    <ClCompile Include="src\Render\Materials\Texture.cpp" />
     <ClCompile Include="src\Utils\Network\HttpClient.cpp" />
     <ClCompile Include="src\Engine\CoDUO.cpp" />
     <ClCompile Include="src\Engine\Mappings\ConsoleMapping.cpp" />
@@ -27,10 +32,6 @@
     <ClCompile Include="src\Engine\Mappings\WeaponMapping.cpp" />
     <ClCompile Include="src\Engine\ScriptLayer\Gsc\GscFunctionExt.cpp" />
     <ClCompile Include="src\Engine\ScriptLayer\Gsc\GscMethodExt.cpp" />
-    <ClCompile Include="src\Render\Buffers\VAO.cpp" />
-    <ClCompile Include="src\Render\Buffers\VAO_utils.cpp" />
-    <ClCompile Include="src\Render\Materials\Shader.cpp" />
-    <ClCompile Include="src\Render\Materials\Texture.cpp" />
     <ClCompile Include="src\Utils\Filesystem\File.cpp" />
     <ClCompile Include="src\Hook\Detours\Game\Loaders.cpp" />
     <ClCompile Include="src\Hook\Detours\Misc\OpenGL.cpp" />
@@ -41,6 +42,7 @@
     <ClCompile Include="src\Utils\ThreadPool\ThreadPool.cpp" />
     <ClCompile Include="src\Utils\WinApiHelper.cpp" />
     <ClCompile Include="src\Engine\Async\Task\Task.cpp" />
+    <ClCompile Include="src\Utils\String\String.cpp" />
     <ClCompile Include="vendor\glad\src\glad.c" />
     <ClCompile Include="vendor\ImGui\imgui.cpp" />
     <ClCompile Include="vendor\ImGui\imgui_demo.cpp" />
@@ -52,8 +54,13 @@
     <ClCompile Include="vendor\stb\stb.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Engine\MapBindings\MapBindings.h" />
     <ClInclude Include="src\Engine\Async\HttpResult\HttpResult.h" />
     <ClInclude Include="src\Engine\Async\Task\Task.h" />
+    <ClInclude Include="src\Render\Buffers\VAO.h" />
+    <ClInclude Include="src\Render\Buffers\VAO_utils.h" />
+    <ClInclude Include="src\Render\Materials\Shader.h" />
+    <ClInclude Include="src\Render\Materials\Texture.h" />
     <ClInclude Include="src\Structs\Engine\cmd.h" />
     <ClInclude Include="src\Structs\Engine\input.h" />
     <ClInclude Include="src\Structs\Engine\level_locals.h" />
@@ -62,10 +69,6 @@
     <ClInclude Include="src\Utils\Network\HttpClient.h" />
     <ClInclude Include="src\Engine\CoDUO.h" />
     <ClInclude Include="src\Engine\ScriptLayer\Gsc\GscExtensions.h" />
-    <ClInclude Include="src\Render\Buffers\VAO.h" />
-    <ClInclude Include="src\Render\Buffers\VAO_utils.h" />
-    <ClInclude Include="src\Render\Materials\Shader.h" />
-    <ClInclude Include="src\Render\Materials\Texture.h" />
     <ClInclude Include="src\Utils\Filesystem\File.h" />
     <ClInclude Include="src\Hook\Detours.h" />
     <ClInclude Include="src\Hook\Hook.h" />
@@ -81,6 +84,7 @@
     <ClInclude Include="src\Utils\OpenGLHelper.h" />
     <ClInclude Include="src\Utils\ThreadPool\ThreadPool.h" />
     <ClInclude Include="src\Utils\WinApiHelper.h" />
+    <ClInclude Include="src\Utils\String\String.h" />
     <ClInclude Include="vendor\cpp-httplib\include\httplib.h" />
     <ClInclude Include="vendor\glad\include\glad\glad.h" />
     <ClInclude Include="vendor\glad\include\KHR\khrplatform.h" />
